Fix a z-index problem in IE7 for details popup.
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@29682 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/ie7.css
+++ b/Site/htdocs/assets/css/ie7.css
@@ -98,3 +98,7 @@ a.disabled:hover {
 	overflow-x: hidden;
 }
 
+#strategy_results, #search_history,
+#sample_strat, #help, #strategy_new {
+	z-index: 2;
+}
